fix chat index item css not overflowing properly

--- a/app/assets/stylesheets/chatrooms.scss
+++ b/app/assets/stylesheets/chatrooms.scss
@@ -65,7 +65,7 @@
   color: white;
   font-family: 'Mukta Mahee', sans-serif;
   opacity: 0.4;
-  height: 32px;
+  height: 100%;
 }
 
 .chatroom_index_item:active {
