--- a/app/assets/stylesheets/home.scss
+++ b/app/assets/stylesheets/home.scss
@@ -22,6 +22,7 @@
   flex-direction: column;
   height: 100vh;
   min-width: 15em;
+  max-width: 15em;
   background-color: #2C2F33;
 }
 
